src/objects/Patient_POT__c.object
<CustomObject>
    <description>Table to hold a plan of treatment for a clinical patient</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Person Account record that this POT is related to</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Patient POTs</relationshipLabel>
        <relationshipName>Patient_POTs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Center_Formula__c</fullName>
        <formula>Account__r.Center__r.Name</formula>
        <label>Center Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Doctor_Notes__c</fullName>
        <label>Doctor Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The start record this POT is tied to</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Patient POTs</relationshipLabel>
        <relationshipName>Patient_POTs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Plan_of_Treatment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Points to the plan of treatment records that was used as the template for this POT</description>
        <label>Plan of Treatment</label>
        <referenceTo>Plan_of_Treatment__c</referenceTo>
        <relationshipLabel>Patient POTs</relationshipLabel>
        <relationshipName>Patient_POTs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Treatment_Description__c</fullName>
        <description>Copy of the POT treatment description at time of plan selection</description>
        <label>Treatment Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Patient POT</label>
    <nameField>
        <label>Patient POT Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Patient POTs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>